подключил данные по Режевскому ГО

--- a/web/index2.html
+++ b/web/index2.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://api-maps.yandex.ru/2.1/?apikey=23433d4b-ba8e-4b36-8d78-40afc5eb0acf&lang=ru_RU" type="text/javascript"></script>
     <script src="https://yandex.st/jquery/2.2.3/jquery.min.js" type="text/javascript"></script>
-    <script src="script_om2.js" type="text/javascript"></script>
+    <script src="script_om2.js?ver=2" type="text/javascript"></script>
 </head>
 <body>
 <h3 class="header_font">Карта доступности финасовых услуг</h3>
